# escrow

client/: .eslintrc  .gitignore  package-lock.json  package.json
client/configs/: template.yml
client/src/: escrow_client.ts  index.ts  layout.ts  utils.ts
onchain/: Cargo.toml
onchain/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
onchain/tests/: integration.rs
