[package]
name = "escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.7.8"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0.29"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.7.8"
solana-sdk = "=1.7.8"
solana-validator = "=1.7.8"

[lib]
crate-type = ["cdylib", "lib"]
